--- a/compose.yaml
+++ b/compose.yaml
@@ -12,11 +12,11 @@ services:
     restart: always
     user: postgres
     environment:
-      - POSTGRES_DB=example
+      - POSTGRES_DB=courses_management_system
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-    expose:
-      - 5432
+    ports:
+      - 5432:5432
     healthcheck:
       test: ["CMD", "pg_isready"]
       interval: 10s
